# directwrite-rs

./: Cargo.toml  LICENSE  README.md
examples/: emoji_clusters.rs  print_face_names.rs
src/: client_effect.rs  comptr.rs  drawing_effect.rs  enums.rs  error.rs  factory.rs  glyphs.rs  helpers.rs  internal.rs  key.rs  lib.rs  load_dll.rs  text_format.rs  text_layout.rs  text_range.rs
src/descriptions/: dbool.rs  font_feature.rs  glyphs.rs  key.rs  mod.rs  strikethrough.rs  text_range.rs  trimming.rs  underline.rs  wide_str.rs
src/effects/: client_effect.rs  drawing_effect.rs  mod.rs
src/enums/: break_condition.rs  flow_direction.rs  font_face_type.rs  font_feature_tag.rs  font_file_type.rs  font_simulations.rs  font_stretch.rs  font_style.rs  font_weight.rs  informational_string_id.rs  line_spacing_method.rs  measuring_mode.rs  mod.rs  number_substitution_method.rs  paragraph_alignment.rs  pixel_geometry.rs  reading_direction.rs  rendering_mode.rs  text_alignment.rs  trimming_granularity.rs  word_wrapping.rs
src/factory/: mod.rs
src/font/: mod.rs
src/font_collection/: builder.rs  mod.rs
src/font_collection/loader/: com_enumerator.rs  com_loader.rs  handle.rs  key_loader.rs  mod.rs
src/font_collection/loader/vtbl/: comref.rs  mod.rs
src/font_collection_loader/: enum_vtbl.rs  mod.rs  vtbl.rs
src/font_face/: builder.rs  metrics.rs  mod.rs  table.rs
src/font_family/: mod.rs
src/font_file/: builder.rs  mod.rs
src/font_file/loader/: com_loader.rs  com_stream.rs  file_loader.rs  file_stream.rs  handle.rs  mmap_stream.rs  mod.rs  owned_stream.rs  set_loader.rs  shared_stream.rs  static_stream.rs
src/font_file/loader/vtbl/: comref.rs  mod.rs
src/font_list/: mod.rs
src/geometry_sink/: com_sink.rs  mod.rs  vtbl.rs
src/inline_object/: mod.rs  vtbl.rs
src/inline_object/custom/: com_obj.rs  mod.rs
src/localized_strings/: mod.rs
src/metrics/: cluster.rs  font.rs  glyph.rs  hit_test.rs  inline_object.rs  line.rs  mod.rs  overhang.rs  text.rs
src/number_substitution/: builder.rs  mod.rs
src/pixel_snapping/: mod.rs
src/rendering_params/: mod.rs
src/text_analysis/: mod.rs
src/text_analysis/source/: custom.rs  mod.rs
src/text_format/: builder.rs  mod.rs
src/text_layout/: builder.rs  metrics.rs  mod.rs
src/text_renderer/: mod.rs
src/text_renderer/custom/: com_renderer.rs  mod.rs
src/text_renderer/vtbl/: comref.rs  mod.rs
src/typography/: builder.rs  mod.rs
tests/: basic_tests.rs  create_factory.rs  custom_loader.rs  text_renderer.rs._
