[package]
name = "directwrite"
version = "0.3.0-alpha1"
authors = ["Connie Hilarides <conni_h@outlook.com>"]
description = """
A safe abstraction for interacting with DirectWrite, intended initially
to be used with direct2d for easy text rendering.
"""
repository = "https://github.com/Connicpu/directwrite-rs"
documentation = "https://docs.rs/directwrite/*/x86_64-pc-windows-msvc/directwrite/"
license = "MIT/Apache-2.0"

[target.'cfg(windows)'.dependencies]
wio = "0.2"
auto-enum = "0.1.2"
checked-enum = "0.1.1-alpha1"
com-wrapper = "0.1.0-alpha1"
derive-com-wrapper = "0.1.0-alpha4"
math2d = { version = "0.1.3", features = ["d2d"] }

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.6"
features = ["dwrite", "winbase", "winnls"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

