[package]
name = "directwrite"
version = "0.3.0-alpha4"
authors = ["Connie Hilarides <conni_h@outlook.com>"]
description = """
A safe abstraction for interacting with DirectWrite, intended initially
to be used with direct2d for easy text rendering.
"""
repository = "https://github.com/Connicpu/directwrite-rs"
documentation = "https://docs.rs/directwrite/*/x86_64-pc-windows-msvc/directwrite/"
license = "MIT/Apache-2.0"
edition = "2018"
workspace = ".."

[target.'cfg(windows)'.dependencies]
wio = "0.2"
math2d = { version = "0.2.0-alpha1", path = "../math2d", features = ["d2d"] }
memmap = "0.7.0"

checked-enum = "0.1.1-alpha1"
auto-enum = "0.2.0-alpha1"

com-wrapper = "0.1.0-alpha2"
derive-com-wrapper = "0.1.0-alpha4"

com-impl = "0.1.0-alpha2"
derive-com-impl = "0.1.0-alpha3"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.6"
features = ["dwrite", "winbase", "winnls"]

[target.'cfg(windows)'.dependencies.dcommon]
version = "0.3.0-alpha1"
path = "../dcommon"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

